--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- header section strats -->
     <header class="header_section" style="overflow: hidden;" >
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container" style="height:50px !Important">
+        <nav class="navbar navbar-expand-lg custom_nav-container" >
           <a class="navbar-brand" href="index.html" >
             <img src="images/logo.png" alt="" />
             <span >
@@ -105,39 +105,39 @@
                 <div class="offset-md-1 col-md-4 img-container">
                   <div class="img-box">
                     <img src="images/slider-img.png" alt="">                  
-				  <div class="row">
-          <div class="col-lg-12 col-md-10 mx-auto">
-            <div class="info_contact layout_padding2">
-              <div class="row" style="color:white">
-                <div class="col-md-7">
-				  <a href="#" class="link-box d-flex align-items-center">
-					<div class="img-box me-3">
-					  <img src="images/mail.png" alt="" style="width: 30px; height: 20px;">
+					<div class="row">
+					  <div class="col-lg-12 col-md-10 mx-auto">
+						<div class="info_contact">
+						  <div class="row" style="color:white">
+							<div class="layout_padding3">
+							 <a href="#" class="link-box d-flex align-items-center">
+								<div class="img-box me-3">
+								  <img src="images/mail.png" alt="" style="width: 30px; height: 20px;">
+								</div>
+								<div class="">
+								  <h6 class="mb-0"  style="margin: 0; text-align: left;color: white;">
+									&nbsp;shujakmohdnor@gmail.com
+								  </h6>
+								</div>
+							 </a>
+							</div>
+							<div class="layout_padding3">
+							  <a href="https://wa.me/601119309680" class="link-box d-flex align-items-center">
+								<div class="img-box me-3">
+								  <img src="images/call.png" alt="" style="width: 20px; height: 19px;">
+								</div>
+								<div class="">
+								  <h6 class="mb-0"  style="color: white;">
+									+60 1119309680
+								  </h6>
+								</div>
+							  </a>
+							</div>
+						  </div>
+						</div>
+					  </div>
 					</div>
-					<div class="">
-					  <h6 class="mb-0"  style="margin: 0; text-align: left;color: white;">
-						&nbsp;shujakmohdnor@gmail.com
-					  </h6>
-					</div>
-				  </a>
-				</div>
-				<div class="col-md-5">
-				  <a href="#" class="link-box d-flex align-items-center">
-					<div class="img-box me-3">
-					  <img src="images/call.png" alt="" style="width: 20px; height: 19px;">
-					</div>
-					<div class="">
-					  <h6 class="mb-0"  style="color: white;">
-						+60 1119309680
-					  </h6>
-					</div>
-				  </a>
-				</div>
-              </div>
-            </div>
-          </div>
-        </div>
-		</div>
+				  </div>
                 </div>
               </div>
             </div>
@@ -348,25 +348,23 @@
           <div class="col-md-5 offset-md-1">
             <div class="detail-box">
               <div class="heading_container">
-                <h2>
-                  Work Freelaner Has Done
-                </h2>
+                
               </div>
               <div class="tab_container">
-                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <div class="t-link-box" >
                   <div class="img-box">
                     <img src="images/f1.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      $250 Million
+                      RM 3000
                     </h5>
                     <h3>
-                      Paid to Freelancers
+                      Rate salary
                     </h3>
                   </div>
                 </div>
-                <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <!--<div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   <div class="img-box">
                     <img src="images/f2.png" alt="">
                   </div>
@@ -391,18 +389,18 @@
                       Worldwide Freelancer
                     </h3>
                   </div>
-                </div>
-                <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                </div>-->
+                <div class="t-link-box " >
                   <div class="img-box">
                     <img src="images/f4.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      98%
+                      5 Year
                     </h5>
                     <h3>
-                      Customer <br>
-                      Satisfaction Rate
+                      Experience in<br>
+                      web and system Development
                     </h3>
                   </div>
                 </div>
@@ -410,26 +408,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
-              <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
-              </div>
-            </div>
-            <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
-              <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
-              </div>
-            </div>
-            <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
-              <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
-              </div>
-            </div>
-            <div class="collapse" id="collapseFour" aria-labelledby="headingfour" data-parent="#accordion">
-              <div class="img-box">
-                <img src="images/freelance-img.jpg" alt="">
-              </div>
-            </div>
+            
           </div>
         </div>
       </div>
@@ -595,7 +574,7 @@
                   </a>
                 </div>
                 <div class="col-md-6">
-                  <a href="#" class="link-box">
+                  <a href="https://wa.me/601119309680" class="link-box">
                     <div class="img-box">
                       <img src="images/call.png" alt="">
                     </div>
